Fixed MatchSimulationTest.java and related bugs